[gd_scene load_steps=17 format=3 uid="uid://deafssq11jyu2"]

[ext_resource type="Script" path="res://scripts/playScreen.gd" id="1_om22i"]
[ext_resource type="Theme" uid="uid://djamegob8hxxb" path="res://Assets/Themes/PanelB.tres" id="2_ud75q"]
[ext_resource type="PackedScene" uid="uid://divht6dg4fur2" path="res://Scenes/CardProgressLabel.tscn" id="3_30y6a"]
[ext_resource type="Theme" uid="uid://d11c37qf38urw" path="res://Assets/Themes/arrowButton.tres" id="3_wb6ev"]
[ext_resource type="Theme" uid="uid://bx813hlugnxk4" path="res://Assets/Themes/buttonMargin.tres" id="4_84txx"]
[ext_resource type="Theme" uid="uid://dencokkv37j1" path="res://Assets/Themes/SpriteMAdventure.tres" id="4_chqsa"]
[ext_resource type="Theme" uid="uid://ddqwrspjisa5n" path="res://Assets/Themes/speachBubbleTheme.tres" id="4_cs8nd"]
[ext_resource type="Theme" uid="uid://cbjdc0ugsxcns" path="res://Assets/Themes/PanelA.tres" id="4_gq4ub"]
[ext_resource type="Theme" uid="uid://r2vpf15phgil" path="res://Assets/Themes/orangeButtonNew.tres" id="4_y65ys"]
[ext_resource type="Texture2D" uid="uid://bx7pqymtd37xo" path="res://Assets/Images/RedHeart.png" id="6_n6s0q"]
[ext_resource type="Theme" uid="uid://dvhp3b2jmqwjt" path="res://Assets/Themes/PanelC.tres" id="6_qflhn"]
[ext_resource type="Theme" uid="uid://bqqaoqmfnthc1" path="res://Assets/Themes/greenButtonNew.tres" id="12_jmsvf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wov2c"]
bg_color = Color(0.150865, 0.0527684, 0.075334, 1)
draw_center = false
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwkxd"]

[sub_resource type="Gradient" id="Gradient_pv2ao"]
interpolation_mode = 2
colors = PackedColorArray(1.15514e-06, 0.376315, 0.184347, 1, 0.209471, 0.696311, 0.479194, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_a0eps"]
gradient = SubResource("Gradient_pv2ao")
width = 200

[node name="PlayDeck" type="Control"]
layout_mode = 3
anchor_right = 1.058
anchor_bottom = 1.006
offset_left = 70.0
offset_top = 2.0
offset_right = -136.816
offset_bottom = -8.888
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_om22i")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -33.0
offset_right = 34.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_gq4ub")

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0.556863, 0.541176, 0.490196, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme = ExtResource("2_ud75q")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
alignment = 2

[node name="MenuBar" type="MenuBar" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="File" type="PopupMenu" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/MenuBar"]
auto_translate_mode = 1

[node name="Edit" type="PopupMenu" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/MenuBar"]
auto_translate_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_84txx")

[node name="ExitButton" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("4_y65ys")
text = "Exit Deck"

[node name="PanelContainer5" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_gq4ub")

[node name="ColorRect" type="ColorRect" parent="PanelContainer/VBoxContainer/PanelContainer5"]
layout_mode = 2
color = Color(0.556863, 0.541176, 0.490196, 1)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/PanelContainer5"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/VBoxContainer/PanelContainer5/MarginContainer"]
visible = false
layout_mode = 2
value = 39.43

[node name="CardProgressHBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer5/MarginContainer"]
layout_mode = 2

[node name="Label" parent="PanelContainer/VBoxContainer/PanelContainer5/MarginContainer/CardProgressHBoxContainer" instance=ExtResource("3_30y6a")]
visible = false
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("6_qflhn")

[node name="ColorRect" type="ColorRect" parent="PanelContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
color = Color(0.556863, 0.541176, 0.490196, 1)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 17
theme_override_constants/margin_top = 17
theme_override_constants/margin_right = 17
theme_override_constants/margin_bottom = 17

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 17
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
alignment = 2

[node name="studyMsg" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("4_cs8nd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="studyBuddy" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 210)
layout_mode = 2
size_flags_vertical = 10
theme = ExtResource("4_chqsa")

[node name="PrevArrow" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(80, 100)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_wb6ev")
text = "<"

[node name="PrevArrowDisabled" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(80, 100)
layout_mode = 2
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_gq4ub")

[node name="ColorRect" type="ColorRect" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
color = Color(0.556863, 0.541176, 0.490196, 1)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
color = Color(0.556863, 0.541176, 0.490196, 1)

[node name="QLabel" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(830, 115)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Question Here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ATextEdit" type="TextEdit" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
clip_contents = false
custom_minimum_size = Vector2(900, 300)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Answer Here"

[node name="AnswerLineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 255)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
placeholder_text = "Type answer here..."

[node name="TrueFalseChoice" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 260)
layout_mode = 2
size_flags_vertical = 3

[node name="TrueButton" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/TrueFalseChoice"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("12_jmsvf")
theme_override_font_sizes/font_size = 50
text = "True"

[node name="FalseButton" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/TrueFalseChoice"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_y65ys")
theme_override_font_sizes/font_size = 50
text = "False"

[node name="MultipleChoice" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 260)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MultipleChoice"]
layout_mode = 2
size_flags_vertical = 3

[node name="A1Button" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MultipleChoice/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("12_jmsvf")

[node name="A2Button" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MultipleChoice/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_y65ys")

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MultipleChoice"]
layout_mode = 2
size_flags_vertical = 3

[node name="A3Button" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MultipleChoice/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_y65ys")

[node name="A4Button" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MultipleChoice/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("12_jmsvf")

[node name="NextArrow" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 100)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme = ExtResource("12_jmsvf")
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 75
text = ">"

[node name="PanelContainer4" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_gq4ub")

[node name="ColorRect" type="ColorRect" parent="PanelContainer/VBoxContainer/PanelContainer4"]
layout_mode = 2
color = Color(0.556863, 0.541176, 0.490196, 1)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/PanelContainer4"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/PanelContainer4/MarginContainer"]
layout_mode = 2
theme = ExtResource("4_gq4ub")

[node name="ColorRect" type="ColorRect" parent="PanelContainer/VBoxContainer/PanelContainer4/MarginContainer/PanelContainer"]
layout_mode = 2
color = Color(0.556863, 0.541176, 0.490196, 1)

[node name="BoxContainer" type="BoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer4/MarginContainer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer/PanelContainer4/MarginContainer/PanelContainer/BoxContainer"]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Heart1" type="TextureRect" parent="PanelContainer/VBoxContainer/PanelContainer4/MarginContainer/PanelContainer/BoxContainer/CenterContainer"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
texture = ExtResource("6_n6s0q")
expand_mode = 3
stretch_mode = 5

[node name="CenterContainer2" type="CenterContainer" parent="PanelContainer/VBoxContainer/PanelContainer4/MarginContainer/PanelContainer/BoxContainer"]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Heart2" type="TextureRect" parent="PanelContainer/VBoxContainer/PanelContainer4/MarginContainer/PanelContainer/BoxContainer/CenterContainer2"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
texture = ExtResource("6_n6s0q")
expand_mode = 3
stretch_mode = 5

[node name="CenterContainer3" type="CenterContainer" parent="PanelContainer/VBoxContainer/PanelContainer4/MarginContainer/PanelContainer/BoxContainer"]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Heart3" type="TextureRect" parent="PanelContainer/VBoxContainer/PanelContainer4/MarginContainer/PanelContainer/BoxContainer/CenterContainer3"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
texture = ExtResource("6_n6s0q")
expand_mode = 3
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/PanelContainer4/MarginContainer/PanelContainer/BoxContainer"]
layout_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_ud75q")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer"]
clip_children = 2
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_wov2c")
theme_override_styles/fill = SubResource("StyleBoxFlat_gwkxd")
step = 0.001
value = 84.49
show_percentage = false

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_a0eps")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer"]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="TimerLabel" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/outline_size = 10
text = "Time Here"

[node name="Timer" type="Timer" parent="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer/HBoxContainer/TimerLabel"]

[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PrevArrow" to="." method="_on_prev_arrow_pressed"]
[connection signal="text_submitted" from="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/AnswerLineEdit" to="." method="_on_answer_line_edit_text_submitted"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/TrueFalseChoice/TrueButton" to="." method="_on_true_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/TrueFalseChoice/FalseButton" to="." method="_on_false_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MultipleChoice/HBoxContainer/A1Button" to="." method="_on_a1_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MultipleChoice/HBoxContainer/A2Button" to="." method="_on_a2_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MultipleChoice/HBoxContainer2/A3Button" to="." method="_on_a3_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MultipleChoice/HBoxContainer2/A4Button" to="." method="_on_a4_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer/NextArrow" to="." method="_on_next_arrow_pressed"]
